--- a/news.html
+++ b/news.html
@@ -115,8 +115,19 @@
           </ul>
         </div>
 
-        <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div></div>
-
+       <div id="fb-root"></div>
+　　　　<script>(function(d, s, id) {
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) return;
+         js = d.createElement(s); js.id = id;
+         js.src = 'https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v3.1';
+         fjs.parentNode.insertBefore(js, fjs);
+　　　　}(document, 'script', 'facebook-jssdk'));</script>
+　　　　
+　　　　<div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+　　　　  <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
+　　　　    <a href="https://www.facebook.com/facebook">Facebook</a>
+　　　　    </blockquote></div>
       </div>
 
     </div>
